fix back-to-top button pos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h6,
     height: 40px;
     border-radius: 3px;
     right: 15px;
-    bottom: 15px;
+    bottom: 80px;
     background: var(--color-tertiary);
     color: var(--color-white);
     transition: display 0.5s ease-in-out;
